fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Account__c/CX_Sales_Rep_Account__c.object-meta.xml
<CustomObject>
    <label>CX Sales Rep Account</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>CX Sales Rep Account Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CX Sales Rep Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>