fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Account__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>Sales_Rep_Customer__r.SAP_Sold_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>