fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Account__c/fields/CX_Sales_Rep_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CX_Sales_Rep_Feedback__c</fullName>
    <label>CX Sales Rep Feedback</label>
    <referenceTo>CX_Sales_Rep_Feedback__c</referenceTo>
    <relationshipLabel>CX Sales Rep Accounts</relationshipLabel>
    <relationshipName>CX_Sales_Rep_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>