fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Account__c/fields/If_no_then_do_you_know_who__c.field-meta.xml
<CustomField>
    <fullName>If_no_then_do_you_know_who__c</fullName>
    <label>If no, then do you know who?</label>
    <length>55</length>
    <type>Text</type>
</CustomField>