fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Account__c/fields/Sales_Rep_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CX Sales Rep Accounts</relationshipLabel>
    <relationshipName>CX_Sales_Rep_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>