fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Account__c/fields/Yes__c.field-meta.xml
<CustomField>
    <fullName>Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes</label>
    <type>Checkbox</type>
</CustomField>